--- a/pages/stylesheet.css
+++ b/pages/stylesheet.css
@@ -19,22 +19,22 @@ nav{
     font-weight: 300;
     background-color: rgb(29, 29, 29);
 }
-button { 
+.container button { 
     padding: 55px 15px;
     background-color: rgba(255, 255, 255, 0);
     border: none;
     cursor: pointer;
-    transition: all 0.3s ease 0s;
+    transition: aLl 0.3s ease 0s;
     color: white;
     font-size: 20px;
     font-family: "poppins", sans-serif;
     font-weight: 300;
 }
 
-button:hover {
+.container button:hover {
     background-color: rgb(0, 153, 255);
     color: rgb(29, 29, 29);
-}
+}w
 
 .burger{
     display: none;
@@ -98,3 +98,59 @@ button:hover {
 
     }
 }
+
+.slider{
+    overflow: hidden;
+}
+
+#slider figure{
+    position: relative;
+    width: 500%;
+    margin: 0;
+    left: 0;
+    animation: 20s slider infinite;
+}
+
+#slider figure img{
+    width: 20%;
+    float: left;
+
+}
+
+@keyframes slider {
+    0%{
+        left: 0;
+    }
+    20%{
+        left: 0;
+    }
+    25%{
+        left: -100%;
+    }
+    45%{
+        left: -100%;
+    }
+    50%{
+        left: -200%;
+    }
+    70%{
+        left: -200%;
+    }
+    75%{
+        left: -300%;
+    }
+    95%{
+        left: -300%;
+    }
+    100%{
+        left: -400%;
+    }
+
+}
+
+.text {
+    height: 8vh;
+    width: 8vw;
+    background-color: cornsilk;
+}
+
